--- a/www/ejercicios/8.ejercicio-dom/ejercicio8.html
+++ b/www/ejercicios/8.ejercicio-dom/ejercicio8.html
@@ -9,7 +9,7 @@
 <body>
     <h1>00:00:00:00</h1>
 
-    <button class="start"> Empezar </button>
+    <button class="start"> Iniciar </button>
     <button class="stop"> Detener </button>
     <button class="reset"> Resetear </button>
 
